# myclaudia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.user.md  Caddyfile  composer.json  deploy.php  docker-compose.sidecar.yml  docker-compose.yml  lefthook.yml  phpstan-baseline.neon  phpunit.xml  repo-milestones-issues-report.txt  requirements-dev.txt
.claude/: settings.json
.codex/skills/: skill_codex_environment_core.md  skill_codex_sidecar_build_and_deploy.md  skill_codex_ssh_hotfix.md
.github/matchers/: mypy.json
.github/workflows/: ci.yml  deploy.yml  eval-validate.yml
agent/: Dockerfile  conftest.py  eval_judge.py  eval_report.py  eval_runner.py  main.py  pyproject.toml
agent/claudriel_agent/: emit.py
agent/tests/: test_code_task_tools.py  test_continuation.py  test_emit.py  test_eval_contracts.py  test_eval_judge.py  test_eval_report.py  test_eval_schema.py  test_github_tools.py  test_http.py  test_http_errors.py  test_tool_contracts.py  test_tool_loader.py
agent/tools/: __init__.py  calendar_create.py  calendar_list.py  code_task_create.py  code_task_status.py  commitment_list.py  commitment_update.py  github_add_comment.py  github_create_issue.py  github_list_issues.py  github_list_pulls.py  github_notifications.py  github_read_issue.py  github_read_pull.py  gmail_list.py  gmail_read.py  gmail_send.py  person_detail.py  person_search.py  repo_clone.py  workspace_create.py  workspace_delete.py
agent/util/: http.py
config/: waaseyaa.php
docker/php/: Dockerfile
docker/sidecar/: Dockerfile  entrypoint.sh  requirements.txt
docs/: admin-host-contract.md
docs/design/: temporal-agents-proactive-guidance-v1.md  temporal-schedule-ux-v1.md
evals/: package-lock.json  package.json  promptfooconfig.yaml
src/: DriftDetector.php
templates/: 404.html.twig  base.html.twig  chat.html.twig  dashboard.twig  day-brief.html.twig  page.html.twig  settings.html.twig
tests/: bootstrap.php
tools/: drift-detector.sh
(+615 files in other folders)
